# 2022_tomocube_preprocess

./: .gitignore  README.md  pyproject.toml  snakefile
data/processed/: distribution_metrics.csv  exclude_images.csv  target_files.txt  tomocube_metadata.csv
src/: check_images.py  create_exclude_images.py  create_image_distribution.py  create_image_page.py  create_target_file_list.py  create_task_dataset.py  create_tomocube_metadata.py  create_tomocube_metadata.sql  database.py  dataloader.py  file.py  image.py  preprocess_pipeline.py  raw_numpy_to_input.py  raw_numpy_to_input2.py  run_all_target_files.py  tiff_to_numpy.py
src/RI_distribution/: preprocess_distribution_metrics.R
task/: diagnosis_CD8_healthy_timepoint1_CD8.pkl  lungT_healthy_CD8_healthy_lungT_CD8.pkl  severe_CD8_timepoint1_timepoint2_CD8.pkl  task.yaml
tests/: test_image.py  test_raw_numpy_to_input.py  test_tiff_to_numpy.py
